cambios efectuados: se centro la tabla de información personal vertical y horizontalmente

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -27,6 +27,10 @@
     width: 150px;
 }
 
+.tablaInformacionPersonal{
+    display: flex;
+    align-items: center;
+}
 /* .contenedorProfesionalSkills-Employment{
     width: 100%;
 } */
