--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -28,6 +28,10 @@ body, .navbar{
     border-radius: 25%;
 }
 
+h2{
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
 .navbar-nav{
     margin: auto;
 }
@@ -40,14 +44,17 @@ body, .navbar{
     display: flex;
     align-items: center;
 }
-/* .contenedorProfesionalSkills-Employment{
-    width: 100%;
-} */
 
 .carousel-item img{
     height: 450px;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     margin: 1px;
+    border-radius: 35px;
+
+    
+    -webkit-box-shadow: 13px -6px 12px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 13px -6px 12px -2px rgba(0,0,0,0.75);
+    box-shadow: 13px -6px 12px -2px rgba(0,0,0,0.75);
 
 }
 
@@ -77,7 +84,6 @@ footer{
     }
 
     .carousel-item img{
-        width: 250px;
         height: 450px;
     }
     
